# evalio-example

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
src/: CppPipeline.cpp  main.cpp
src/evalio_example/: CppPipeline.cpp  PythonPipeline.py  RawDataset.py  RosDataset.py  __init__.py
